# app-info

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: save_icon.rs
src/: error.rs  lib.rs  macos.rs  window.rs
