[package]
name = "app-info"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[[example]]
name = "save_icon"
path = "examples/save_icon.rs"

# macOS specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
icns = "0.3"
cocoa = "0.25"
objc = "0.2"
objc2 = "0.5.2"
objc2-vision = { version = "0.2.2", features = ["all"] }
objc2-foundation = { version = "0.2.2", features = ["NSString"] }
block2 = "0.5.1"
core-graphics2 = "0.4.1"
itertools = "0.13.0"
objc2-app-kit = { version = "0.2.2", features = [
    "NSBitmapImageRep",
    "NSImageRep",
    "NSWorkspace",
    "NSImage",
    "NSGraphics",
    "NSGraphicsContext",
] }
plist = "1.7.2"

# Windows specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
] }
scopeguard = "1.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
image = "0.24"
